Shop UI fixes, pending adding filtering and fixing scrollbar issues

--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -354,3 +354,7 @@ form { height: 95%; background-color: darkslategray; }
 .mat-grid-tile .mat-figure {
   display: block !important;
 }
+
+.mat-card-content {
+  text-align: justify;
+}
